--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<button id="routeButton">Make a route</button>
 			<button id="routeButtonInputClean">Clean input</button>
 			<button id="routeButtonDelete">Delete a route</button>
+			<button id="routeButtonReverse">Reverse</button>
 		</div>
 	
 	</form>
